@@ -23,6 +23,8 @@ Release 2.0 (XXX XX, 2012)
 * Fixed: Now installing the static resources (fixed by omad)
 * Fixed ManyToMany form field save handling (fixed by Alexei Vlasov and
   Alejandro Peralta)
+* Documented a Django bug in mp_tree.rst, marked some delete tests as
+  expected failures under certain conditions (issue #44)
 
 Release 1.61 (Jul 24, 2010)
 ---------------------------
